1. 端口文档更新 2. eureka中 注册信息改为ip 3.d-zuul 项目中简单路由规则设定 application 中注解     @EnableEurekaClient     @EnableZuulProxy application.yml配置   stripPrefix: false --- 是否移除前缀，默认移除。 zuul:   routes:     routeTest:        stripPrefix: false
Signed-off-by: silinabo <silianbo@qq.com>

--- a/d-eurka/d-eureka-server/src/main/resources/application.yml
+++ b/d-eurka/d-eureka-server/src/main/resources/application.yml
@@ -11,9 +11,9 @@ eureka:
     status-page-url:
 
   server:
-    #关闭自我保护机制
+    #鍏抽棴鑷垜淇濇姢鏈哄埗
     enable-self-preservation: false
-    #清理无效节点 4s
+    #娓呯悊鏃犳晥鑺傜偣 4s
     eviction-interval-timer-in-ms: 4000
 
   client:
