--- a/d-zuul/src/main/resources/application.yml
+++ b/d-zuul/src/main/resources/application.yml
@@ -1,1 +1,39 @@
+server:
+  port: 8003
 
+spring:
+  application:
+    name: zuul
+
+#路由规则设定
+zuul:
+  routes:
+    routeTest:
+      path: /routeTest/163
+      url: http://www.163.com/
+
+    api-1:
+      path: /api-1/**
+      serviceId: hello
+    api-2:
+      path: /api-2/**
+      url: http://localhost:8888
+
+# 是否去除path前缀
+# 当stripPrefix=true的时候 （http://localhost:8003/api-1/find/s?username=silianbo -> http://localhost:8888/find/s?username=silianbo）
+# 当stripPrefix=false （http://localhost:8003/api-1/find/s?username=silianbo -> http://localhost:8888/api-1/find/s?username=silianbo）
+#      stripPrefix: false
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8001/eureka/
+  instance:
+    #标识eureka client 给服务端发送信息的频率 10s
+    lease-renewal-interval-in-seconds: 10
+    #eureka server 在30s 后，没有收到 client信息的心跳,则将注册的客户端移除
+    lease-expiration-duration-in-seconds: 30
+    # 配置使用主机名注册服务
+    hostname: localhost
+    # 优先使用IP地址方式进行注册服务
+    prefer-ip-address: true
