拦截器生命周期： ”pre”、”route”、”post”、”error”
Signed-off-by: silinabo <silianbo@qq.com>

--- a/d-zuul/src/main/resources/application.yml
+++ b/d-zuul/src/main/resources/application.yml
@@ -51,3 +51,8 @@ eureka:
     hostname: localhost
     # 优先使用IP地址方式进行注册服务
     prefer-ip-address: true
+
+logging:
+  level:
+    root: info
+    org.springframework.web: warn
