3个客户端模拟负载支持（Feign和Ribbon结合）
Signed-off-by: silinabo <silianbo@qq.com>

--- a/d-ribbon/d-ribbon-client-4/src/main/resources/application.yml
+++ b/d-ribbon/d-ribbon-client-4/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8004
+  port: 8009
 
 spring:
   application:
-    name: d-ribbon
+    name: service-ribbon-client
 
 eureka:
   client:
