--- a/d-eurka/pom.xml
+++ b/d-eurka/pom.xml
@@ -2,21 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>springcloud</artifactId>
-        <groupId>com.silianbo.springcloud</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>d-eurka</artifactId>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+    <groupId>com.silianbo.springcloud</groupId>
+    <artifactId>d-eurka</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>d-eurka</name>
 
     <modules>
         <module>d-eureka-server</module>
@@ -26,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
+        <spring-cloud.version>Hoxton.M3</spring-cloud.version>
     </properties>
 
     <dependencies>
