--- a/d-ribbon/d-ribbon-client-3/pom.xml
+++ b/d-ribbon/d-ribbon-client-3/pom.xml
@@ -9,16 +9,10 @@
         <version>2.2.0.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.silianbo.springcloud</groupId>
-    <artifactId>d-ribbon</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>d-ribbon</name>
 
-    <modules>
-        <module>d-ribbon-client-2</module>
-        <module>d-ribbon-client-3</module>
-        <module>d-ribbon-client-4</module>
-    </modules>
+    <groupId>com.silianbo.springcloud</groupId>
+    <artifactId>d-ribbon-client-3</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -41,6 +35,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
