--- a/d-ribbon/d-ribbon-client-3/src/main/resources/application.yml
+++ b/d-ribbon/d-ribbon-client-3/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8002
+  port: 8008
 
 spring:
   application:
-    name: service-eureka-client
+    name: service-ribbon-client
 
 eureka:
   client:
