3个客户端模拟负载支持（Feign和Ribbon结合）
Signed-off-by: silinabo <silianbo@qq.com>

--- a/hello/src/main/resources/application.yml
+++ b/hello/src/main/resources/application.yml
@@ -21,7 +21,7 @@ eureka:
     # 优先使用IP地址方式进行注册服务
     prefer-ip-address: true
 
-#@FeignClient 全局Fallback开启
+#@FeignClient 全局Fallback开启,断熔处理
 feign:
   hystrix:
     enabled: true
