--- a/d-ribbon/pom.xml
+++ b/d-ribbon/pom.xml
@@ -11,6 +11,7 @@
     <name>d-ribbon</name>
 
     <modules>
+        <module>d-ribbon-client-1</module>
         <module>d-ribbon-client-2</module>
         <module>d-ribbon-client-3</module>
         <module>d-ribbon-client-4</module>
