集成消息中间件

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>d-zuul</module>
         <module>hello</module>
         <module>d-nacos</module>
+        <module>d-rabbitmq</module>
     </modules>
 
     <properties>
