--- a/d-rabbitmq/src/main/resources/application.yml
+++ b/d-rabbitmq/src/main/resources/application.yml
@@ -27,7 +27,8 @@ logging:
   pattern:
     level:
     file:
-    console: '%clr(%d{HH:mm:ss}){yellow} [%clr(%thread){red}] %-5level --- %clr(%logger){green} | %msg%n'
+    console: '%clr(%d{YYYY:HH:mm:ss}){yellow} %-5level --- %clr(%logger){green}  %msg%n'
+    # console: '%clr(%d{HH:mm:ss}){yellow} [%clr(%thread){red}] %-5level --- %clr(%logger){green} | %msg%n'
 
 
 
