--- a/d-eureka/d-eureka-server/src/main/resources/application.yml
+++ b/d-eureka/d-eureka-server/src/main/resources/application.yml
@@ -23,6 +23,7 @@ eureka:
 logging:
   level:
     org.springframework: warn
+    com.netflix.eureka.registry.AbstractInstanceRegistry: warn
   pattern:
     level:
     file:
