--- a/d-mq/src/main/resources/application.yml
+++ b/d-mq/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
     port: 5672
     username: guest
     password: guest
+    publisher-confirm-type: correlated
 
   redis:
     host: localhost
