--- a/d-mq/src/main/resources/application.yml
+++ b/d-mq/src/main/resources/application.yml
@@ -36,7 +36,7 @@ logging:
   pattern:
     level:
     file:
-    console: '%clr(%d{YYYY:HH:mm:ss}){yellow} %-5level %clr(%logger){green}  %msg%n'
+    console: '%clr(%d{yyyy-MM-dd HH:mm:ss:SSS}){yellow} %-5level %clr(%logger){green}  %msg%n'
     # console: '%clr(%d{HH:mm:ss}){yellow} [%clr(%thread){red}] %-5level --- %clr(%logger){green} | %msg%n'
 
 
