--- a/d-mq/src/main/resources/application.yml
+++ b/d-mq/src/main/resources/application.yml
@@ -15,6 +15,9 @@ spring:
     username: guest
     password: guest
     publisher-confirm-type: correlated
+    listener:
+      simple:
+        acknowledge-mode: manual
 
   redis:
     host: localhost
